salesforce-port/force-app/main/default/objects/Card_Transaction__c/Card_Transaction__c.object-meta.xml
<CustomObject>
    <label>Card Transaction</label>
    <nameField><displayFormat>CT-{000000}</displayFormat><label>Transaction Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Card Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>