salesforce-port/force-app/main/default/objects/Card_Transaction__c/fields/Card__c.field-meta.xml
<CustomField>
    <fullName>Card__c</fullName>
    <label>Card</label>
    <type>Lookup</type>
    <referenceTo>Card__c</referenceTo>
    <relationshipLabel>Card Transactions</relationshipLabel>
    <relationshipName>Card_Transactions</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>