salesforce-port/force-app/main/default/objects/Card_Transaction__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Text</type>
    <length>3</length>
</CustomField>