salesforce-port/force-app/main/default/objects/Card_Transaction__c/fields/Matched_Expense__c.field-meta.xml
<CustomField>
    <fullName>Matched_Expense__c</fullName>
    <label>Matched Expense</label>
    <type>Lookup</type>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Card Transactions</relationshipLabel>
    <relationshipName>Card_Transactions</relationshipName>
</CustomField>