salesforce-port/force-app/main/default/objects/Card_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Unmatched</fullName><default>true</default><label>Unmatched</label></value>
            <value><fullName>Matched</fullName><default>false</default><label>Matched</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>